--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+source /usr/share/powerline/bindings/tmux/powerline.conf
+set-option -g default-terminal "screen-256color"
+
 # Change the prefix from Ctrl-b to Ctrl-a set -g prefix C-a unbind C-b
 set -g prefix C-a
 unbind C-b
