--- a/.config/i3/config
+++ b/.config/i3/config
@@ -124,7 +124,7 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 bindsym $mod+Shift+f exec "firefox"
-bindsym $mod+Shift+m exec "mplayer"
+bindsym $mod+Shift+m exec "vlc"
 bindsym $mod+Shift+t exec "lxterminal -e tmux -2"
 
 # resize window (you can also use the mouse for that)
@@ -154,9 +154,15 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 assign [class="Firefox"] 2
-assign [class="MPlayer"] 2
+assign [class="vlc"] 2
 assign [class="HexChat"] 2
+assign [class="Steam"] 2
 
+for_window [class="Pavucontrol"] floating enable
+for_window [class="Pavucontrol"] floating_maximum_size 290 x 174
+for_window [class="vlc"] fullscreen toggle
+for_window [class="Pcmanfm"] floating enable
+for_window [class="Steam"] floating enable
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
