--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-source /usr/share/powerline/bindings/tmux/powerline.conf
+source /Users/crhamiltonj/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf
 set-option -g default-terminal "screen-256color"
 
 # Change the prefix from Ctrl-b to Ctrl-a set -g prefix C-a unbind C-b
