--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,8 @@ bind C-a send-prefix
 # SPlit windows usinf | for vertical and - for horizontal
 bind | split-window -h
 bind - split-window -v
+unbind '"'
+unbind %
 
 # Moving between panes (vim bindings)
 bind h select-pane -L
@@ -56,6 +58,21 @@ bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 bind C-d choose-buffer "run \"tmux save-buffer -b %% - | xclip -i\" \; run \" tmux display \\\"Clipboard \(*\) filled with: $(tmux save-buffer -b %1 - | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \\\" \" "
 # C-f: copy from * clipboard.
 bind C-f run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer" \; run "tmux display \"Copied from \(*\) $(xclip -o | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \""
+
+# increase pane display time
+set display-panes-time 4000
+
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+
+
+# don't rename windows automatically
+set-option -g allow-rename off
+
 
 
 # set -g @plugin 'tmux-plugins/tpm'
