--- a/.config/i3/config
+++ b/.config/i3/config
@@ -157,12 +157,15 @@ assign [class="Firefox"] 1
 assign [class="vlc"] 1
 assign [class="HexChat"] 1
 assign [class="Steam"] 1
+assign [class="Inkscape"] 4
+assign [class="Gimp"] 4
 
 for_window [class="Pavucontrol"] floating enable
 for_window [class="Pavucontrol"] floating_maximum_size 290 x 174
 for_window [class="vlc"] fullscreen toggle
 for_window [class="Pcmanfm"] floating enable
 for_window [class="Steam"] floating enable
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
