--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,3 +21,23 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 set -g default-terminal "screen-256color"
+set -g status-style fg=white,bold,bg=black
+setw -g window-status-style fg=cyan,bg=black
+
+setw -g pane-border-style fg=green,bg=black
+setw -g pane-active-border-style fg=green,bg=black
+
+setw -g window-style fg=colour240,bg=colour235
+setw -g window-active-style fg=white,bg=black
+
+set -g message-style fg=white,bold,bg=black
+
+set -g status-left-length 40
+set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I  #[fg=cyan] #P"
+
+set -g status-right "#[fg=cyan]%d %b %R"
+
+setw -g monitor-activity on
+set -g visual-activity on
+
+set -g status-interval 60
