--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,11 +33,13 @@ setw -g window-active-style fg=white,bg=black
 set -g message-style fg=white,bold,bg=black
 
 set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I  #[fg=cyan] #P"
+set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I  #[fg=cyan]#P"
 
-set -g status-right "#[fg=cyan]%d %b %R"
+set -g status-right "#(~/battery)|#[fg=cyan]%d %b %R"
 
 setw -g monitor-activity on
 set -g visual-activity on
 
 set -g status-interval 60
+set -g status-justify  centre
+
