--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,14 +32,14 @@ setw -g window-active-style fg=white,bg=black
 
 set -g message-style fg=white,bold,bg=black
 
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I  #[fg=cyan]#P"
-
-set -g status-right "#(~/battery)|#[fg=cyan]%d %b %R"
-
 setw -g monitor-activity on
 set -g visual-activity on
 
-set -g status-interval 60
-set -g status-justify  centre
-
+set-option -g status on
+set-option -g status-interval 2
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+set-option -g status-left "#(~/Projects/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#(~/Projects/tmux-powerline/powerline.sh right)"
+set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
