Updated dot files 12/30/18

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 set -g status-style fg=white,bold,bg=black
 setw -g window-status-style fg=cyan,bg=black
 
