Updated tmux vimrc and oh-my-zsh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-source $PYUSERSITE/powerline/bindings/tmux/powerline.conf
+source ~/.local/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
 set-option -g default-terminal "screen-256color"
 
 # Change the prefix from Ctrl-b to Ctrl-a set -g prefix C-a unbind C-b
@@ -60,7 +60,7 @@ bind C-d choose-buffer "run \"tmux save-buffer -b %% - | xclip -i\" \; run \" tm
 bind C-f run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer" \; run "tmux display \"Copied from \(*\) $(xclip -o | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \""
 
 # increase pane display time
-set display-panes-time 4000
+# set display-panes-time 4000
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
