--- a/.config/i3/config
+++ b/.config/i3/config
@@ -129,6 +129,11 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
+# Media volume controls
+bindsym XF86AudioMute exec amixer sset 'Master' toggle
+bindsym XF86AudioLowerVolume exec amixer sset 'Master' 5%-
+bindsym XF86AudioRaiseVolume exec amixer sset 'Master' 5%+
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -169,5 +174,6 @@ bar {
         status_command i3status
 }
 
-exec blueman-manager
-exec jetbrains-toolbox
+exec blueman-applet
+exec syndaemon -i 2 -d -t -K
+# exec jetbrains-toolbox
