--- a/.config/i3/config
+++ b/.config/i3/config
@@ -168,7 +168,7 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-
+focus_on_window_activation none
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
