--- a/.config/i3/config
+++ b/.config/i3/config
@@ -92,6 +92,8 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+# start screenshot tool flameshot
+# bindsym $mod+m exec flameshot
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
@@ -168,13 +170,14 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+bindsym --release Print exec "flameshot gui"
 focus_on_window_activation none
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         status_command i3status
 }
-
+exec_always flameshot
 exec_always ~/.screenlayout/firstlayout.sh
 exec blueman-applet
 exec syndaemon -i 2 -d -t -K
