--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,8 +30,8 @@ font pango:Fira Code 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec /usr/bin/termite -e zsh -c "tmux -q has-session && exec tmux attach-session -d || exec tmux new-session -n$USER -s$USER@$HOSTNAME"
-
+# bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec termite
 # kill focused window
 bindsym $mod+Shift+q kill
 
@@ -179,6 +179,7 @@ bar {
 }
 exec_always flameshot
 exec_always powerkit
+exec_always netctl-tray
 exec_always ~/.screenlayout/firstlayout.sh
 exec blueman-applet
 exec syndaemon -i 2 -d -t -K
