--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 source /usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
 set-option -g default-terminal "screen-256color"
-set-option -g default-shell "/usr/bin/fish"
+# set-option -g default-shell "/usr/bin/fish"
 
 # Change the prefix from Ctrl-b to Ctrl-a set -g prefix C-a unbind C-b
 set -g prefix C-a
