added ssh-agent processing to .bashrc increased font size in termite config changed fg and bg colors in .tmux.conf added calendar to vimrc for vimwiki changed vimwiki file list to vimwiki and refnotes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,3 +71,6 @@ bind -n M-Down select-pane -D
 # don't rename windows automatically
 set-option -g allow-rename off
 
+# status bar configuration
+set -g status-fg white
+set -g status-bg black
