--- a/.config/i3/config
+++ b/.config/i3/config
@@ -171,7 +171,7 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 bindsym --release Print exec "flameshot gui"
-focus_on_window_activation none
+focus_on_window_activation smart
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
