--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,6 +10,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+set $alt Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -170,6 +171,7 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+bindsym $mod+slash exec "splatmoji type"
 bindsym --release Print exec "flameshot gui"
 focus_on_window_activation smart
 # Start i3bar to display a workspace bar (plus the system information i3status
