--- a/.config/i3/config
+++ b/.config/i3/config
@@ -171,7 +171,7 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-bindsym $mod+slash exec "splatmoji type"
+bindsym $mod+slash exec "splatmoji copy"
 bindsym --release Print exec "flameshot gui"
 focus_on_window_activation smart
 # Start i3bar to display a workspace bar (plus the system information i3status
