--- a/.config/i3/config
+++ b/.config/i3/config
@@ -37,7 +37,7 @@ bindsym $mod+Return exec termite
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec dmenu_run -fn 'Iosevka-14'
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -97,16 +97,16 @@ bindsym $mod+a focus parent
 # bindsym $mod+m exec flameshot
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+set $ws1 "1: Main"
+set $ws2 "2: Dev"
+set $ws3 "3: Monitoring"
+set $ws4 "4: Database"
+set $ws5 "5: Education"
+set $ws6 "6: Drawing Art Modeling"
+set $ws7 "7: Comms"
+set $ws8 "8: Music Videos"
+set $ws9 "9: Search"
+set $ws10 "10: Misc"
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -177,8 +177,14 @@ focus_on_window_activation smart
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3status+
+	position 	bottom
+	mode 		dock
+	workspace_buttons 	yes
+	tray_output 	primary
+	
 }
+exec_always xss-lock -- i3lock -n -i ~/Downloads/space.jpg && echo mem > /sys/power/state
 exec_always flameshot
 exec_always powerkit
 exec_always netctl-tray
@@ -187,4 +193,3 @@ exec blueman-applet
 exec syndaemon -i 2 -d -t -K
 exec synclient TouchpadOff=1
 exec xinput set-prop "Synaptics TM3053-003" "Device Enabled" 0
-# exec jetbrains-toolbox
