--- a/.config/i3/config
+++ b/.config/i3/config
@@ -177,7 +177,7 @@ focus_on_window_activation smart
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status+
+        status_command i3status
 	position 	bottom
 	mode 		dock
 	workspace_buttons 	yes
@@ -187,7 +187,7 @@ bar {
 exec_always xss-lock -- i3lock -n -i ~/Downloads/space.jpg && echo mem > /sys/power/state
 exec_always flameshot
 exec_always powerkit
-exec_always netctl-tray
+# exec_always netctl-tray
 exec_always ~/.screenlayout/firstlayout.sh
 exec blueman-applet
 exec syndaemon -i 2 -d -t -K
